--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -9,7 +9,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:layout_marginTop="50dp"
+        android:background="#00F5F5F5"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <ScrollView
